--- a/src/app/layout/loader.scss
+++ b/src/app/layout/loader.scss
@@ -3,7 +3,7 @@
 .loader {
   border: 3px solid transparent;
   border-radius: 50%;
-  border-top: 3px solid $colorDarkBlue;
+  border-top: 3px solid yellowgreen;
   width: 30px;
   height: 30px;
   animation: spin 1s linear infinite;
