--- a/src/app/pages/Profile/profile.scss
+++ b/src/app/pages/Profile/profile.scss
@@ -1,5 +1,23 @@
 @import '../../../scss/main.scss';
 
 .profile-compoent{
-  
+  .user-profile{
+    .user-top{
+      display: flex;
+      justify-content: space-between;
+      width: calc(100% - 40px);
+      margin: 0 auto;
+      padding-top: 20px;
+      background-color: rgb(255, 232, 131);
+      .user-title{
+        font-family: $mainFont;
+      }
+      .user-icons{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+  }
 }
+
